[package]
name = "wifi"
version = "0.1.0"
authors = ["Hojjat <Hojjat.Abdollahi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wifiscanner = { path = "../wifiscanner" }
text_io = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
online = "3.0.1"
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
[dependencies.rocket]
git =  "https://github.com/SergioBenitez/Rocket"
rev = "786db9b"
default-features = false
features = ["json"]
